# Moonshell

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: build-macos.sh  build-windows.ps1  signing.env.example
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ssh.rs  store.rs
src/lib/: hosts.svelte.ts  i18n.svelte.ts  monitor.svelte  settings.svelte.ts  sftp.svelte
src/routes/: +layout.ts  +page.svelte
